third version some little bugs

--- a/config.env
+++ b/config.env
@@ -2,27 +2,25 @@ NODE_ENV=development
 API_KEY=abcd1234
 PORT=3000
 Kubusxu,7xM.y8v
-DB_NAME=Cluster0
-DB_PASS=P7crT1yaYAUF12Mf
-DB_URI=mongodb+srv://amine:<password>@cluster0.cvrzs.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_NAME=basset-sadok
+DB_PASS=basseT_2000
+DB_URI=mongodb+srv://<dbname>:<password>@cluster0.nhkna.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
 JWT_SECRET_KEY=btwhowareyoudoingbroiamfineandyou
 JWT_EXPIRED_IN=90d
 JWT_COOKIE_EXPIRED_IN=90
 
-EMAIL_USERNAME=amine.louni.dev@gmail.com
+EMAIL_USERNAME=sadokbasset@gmail.com
 
 EMAIL_PASSWORD=nabiJOHN28051993
 EMAIL_HOST=smtp.sendgrid.net
 EMAIL_PORT=25
-EMAIL_FROM=amine.louni@goldencorp.net
+EMAIL_FROM=sadokbasset@gmail.com
 
  
 SENDGRID_USERNAME=apikey
 SENDGRID_PASSWORD=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
-
-
  
-CLOUDINARY_CLOUD_NAME=djlbyjz2s
-CLOUDINARY_API_KEY=488835149448172
-CLOUDINARY_API_SECRET=3ty9DP5iNFFu-n3liTrfIF7_PLQ
+CLOUDINARY_CLOUD_NAME=dexuthsh4
+CLOUDINARY_API_KEY=581784682262441
+CLOUDINARY_API_SECRET=a16wpzKXn1MnSx0PnMTsiuL91zE
