fix the bann problem and the admin bidding

--- a/config.env
+++ b/config.env
@@ -4,7 +4,8 @@ PORT=3000
 Kubusxu,7xM.y8v
 DB_NAME=basset-sadok
 DB_PASS=basseT_2000
-DB_URI=mongodb+srv://<dbname>:<password>@cluster0.nhkna.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+# DB_URI=mongodb+srv://<dbname>:<password>@cluster0.nhkna.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_URI=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
 
 JWT_SECRET_KEY=btwhowareyoudoingbroiamfineandyou
 JWT_EXPIRED_IN=90d
